applications/jandjnotes/jjconvo-service.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   kompose.cmd: kompose convert
  #   kompose.version: 1.22.0 (955b78124)
  # creationTimestamp: null
  labels:
    io.kompose.service: jjconvo
  name: jjconvo
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: jjconvo
status:
  loadBalancer: {}
